// 声明 proto 语法版本，固定值
syntax = "proto3";

// proto 包名
package configrpc;

// 生成 golang 代码后的包名
option go_package = "./configrpc";



/************** 网站管理 **************/

message SaveConfigReq {
  string config_key = 1;
  string config_value = 2;
}

message SaveConfigResp {
}

message FindConfigReq {
  string config_key = 1;
}

message FindConfigResp {
  string config_value = 1;
}

service ConfigRpc {
  // 保存配置
  rpc SaveConfig(SaveConfigReq) returns(SaveConfigResp);
  // 查询配置
  rpc FindConfig(FindConfigReq) returns(FindConfigResp);
}
